src/components/sections/Footer/style.module.scss
@import "~assets/styles/variables";
@import "~assets/styles/media";

.footer {
  background-image: url("../../../assets/images/bottom-background.png");
  background-size: 100% 50%;
  padding-top: 78px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-repeat: no-repeat;
  padding-bottom: 44px;

  @media screen and (min-width: $desktop) {
    background-image: url("../../../assets/images/bottom-background-desktop.png");
    background-size: cover;
    padding-top: 213px;
  }
}

.footerTopBlock {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 20px;
  width: 100%;
}

.linksContainer {
  display: flex;
  color: $white;
  justify-content: center;
  margin-top: 24px;
  align-items: center;
  width: 100%;
  padding: 0 48px;

  @media screen and (min-width: $desktop) {
    width: 778px;
    justify-content: space-between;
  }
}

.linksBlock {
  display: flex;
  flex-direction: column;
  line-height: 34px;
  letter-spacing: 0.05em;

  @media screen and (min-width: $desktop) {
    flex-direction: row;
    justify-content: space-between;
  }
}

.linksBlockRightAlign {
  text-align: right;

  @media screen and (min-width: $desktop) {
    width: 250px;
  }
}

.linksBlockLeftAlign {
  text-align: left;
  margin-right: 112px;

  @media screen and (min-width: $desktop) {
    margin-right: 0;
    width: 200px;
  }
}

.socials {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  width: 200px;
  margin-top: 38px;

  @media screen and (min-width: $desktop){

    & > img {
      height: 50px;
    }
  }
}

.copyright {
  color: $darkGray;
  font-size: 14px;
  margin-top: 44px;
  padding: 0 26px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.05em;
  width: 367px;

  @media screen and (min-width: $desktop) {
    width: 100%;
    font-size: 20px;
    line-height: 26px;
    padding: 0;
  }
}

.footerLine {
  background: $darkGray;
  margin-top: 24px;
  border: none;
  height: 1px;
  width: 100%;

  @media screen and (min-width: $desktop) {
    width: 778px;
    background: linear-gradient(89.85deg, #FBBF9A -32.65%, #FFE876 -9.91%, #12F9F8 19.67%, #9CFD82 63.12%, #FCF16E 101.02%, #FED292 144.83%);
    opacity: 0.3;
  }
}

